--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
   ],
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon --exec node server.js"
+    "dev": "nodemon --exec node server.js",
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch"
   },
-  "babel": {
-    "presets": [
-      "env",
-      "react"
-    ]
-  },
+
   "repository": {
     "type": "git",
     "url": "https://github.com/cs409-fa25/mp3.git"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "dotenv": "^17.2.3",
-    "express": "^4.15.3",
-    "mongoose": "^5.4.18",
-    "nodemon": "^1.11.0"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
+    "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.3.0",
+    "supertest": "^7.1.4"
   }
 }
